Fixed bug #81634 ZEND_ENABLE_STATIC_TSRMLS_CACHE produces extensions with the STATIC_TLS flag